--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Fri Sep 10 00:15:06 CEST 2010
+#Fri Feb 11 22:20:58 CET 2011
 eclipse.preferences.version=1
 include_path=0;/zfunittest\u00050;/zfunittest/tests\u00050;/zfunittest/library\u00055;com.zend.php.phpunit.CONTAINER
