Testing the ErrorController

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,6 +11,12 @@ resources.frontController.params.displayExceptions = 0
 resources.db.adapter = "PDO_Sqlite"
 resources.db.params.dbname = APPLICATION_PATH "/data/db/demo-dev.db"
 
+resources.log.stream.writerName = "Stream"
+resources.log.stream.writerParams.stream = APPLICATION_PATH "/data/logs/application.log"
+resources.log.stream.writerParams.mode = "a"
+resources.log.stream.filterName = "Priority"
+resources.log.stream.filterParams.priority = 4
+
 [staging : production]
 
 [testing : production]
