--- a/build.xml
+++ b/build.xml
@@ -24,5 +24,5 @@
 	   <exec command="/usr/bin/phpunit" dir="./tests"/>
 	</target>
 	
-	<target name="build" depends="phpunit"/>
+	<target name="build" depends="phpunit,phpdoc"/>
 </project>
